--- a/webroot/errorlog.html
+++ b/webroot/errorlog.html
@@ -1,5 +1,53 @@
 <h3>Exception information:</h3>
 
+         <p><strong>Date:</strong> Sep 19, 2019 17:55PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[42S02]: Base table or view not found: 1146 Table 'test.accounts' doesn't exist</p>
+
+         <p><strong>Code:</strong> 42S02</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\app\vendor\btinet\simplemvc\src\Modules\Database.php</p>
+
+         <p><strong>Line:</strong> 37</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\app\vendor\btinet\simplemvc\src\Modules\Database.php(37): PDOStatement->execute()
+#1 C:\xampp\htdocs\app\App\Model\UserSession.php(22): Btinet\SimpleMVC\Modules\Database->select('SELECT * FROM a...')
+#2 C:\xampp\htdocs\app\App\Controller\User.php(32): App\Model\UserSession->getAccounts()
+#3 [internal function]: App\Controller\User->login(Array, Array)
+#4 C:\xampp\htdocs\app\vendor\btinet\simplemvc\src\Bootstrap.php(114): call_user_func_array(Array, Array)
+#5 C:\xampp\htdocs\app\vendor\btinet\simplemvc\src\Bootstrap.php(53): Btinet\SimpleMVC\Bootstrap->_callControllerMethod()
+#6 C:\xampp\htdocs\app\webroot\index.php(53): Btinet\SimpleMVC\Bootstrap->init()
+#7 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
+         <p><strong>Date:</strong> Sep 19, 2019 17:55PM</p>
+
+         <p><strong>Message:</strong> SQLSTATE[42S02]: Base table or view not found: 1146 Table 'test.accounts' doesn't exist</p>
+
+         <p><strong>Code:</strong> 42S02</p>
+
+         <p><strong>File:</strong> C:\xampp\htdocs\app\vendor\btinet\simplemvc\src\Modules\Database.php</p>
+
+         <p><strong>Line:</strong> 37</p>
+
+         <h3>Stack trace:</h3>
+
+         <pre>#0 C:\xampp\htdocs\app\vendor\btinet\simplemvc\src\Modules\Database.php(37): PDOStatement->execute()
+#1 C:\xampp\htdocs\app\App\Model\UserSession.php(22): Btinet\SimpleMVC\Modules\Database->select('SELECT * FROM a...')
+#2 C:\xampp\htdocs\app\App\Controller\User.php(32): App\Model\UserSession->getAccounts()
+#3 [internal function]: App\Controller\User->login(Array, Array)
+#4 C:\xampp\htdocs\app\vendor\btinet\simplemvc\src\Bootstrap.php(114): call_user_func_array(Array, Array)
+#5 C:\xampp\htdocs\app\vendor\btinet\simplemvc\src\Bootstrap.php(53): Btinet\SimpleMVC\Bootstrap->_callControllerMethod()
+#6 C:\xampp\htdocs\app\webroot\index.php(53): Btinet\SimpleMVC\Bootstrap->init()
+#7 {main}</pre>
+
+         <hr />
+<h3>Exception information:</h3>
+
          <p><strong>Date:</strong> Sep 19, 2019 17:53PM</p>
 
          <p><strong>Message:</strong> SQLSTATE[42S02]: Base table or view not found: 1146 Table 'test.accounts' doesn't exist</p>
